syntax = "proto3";

package com.animalregistration;
option java_multiple_files = true;

service AnimalRegistrationService {
  // Register a new animal
  rpc RegisterAnimal (AnimalRequest) returns (AnimalResponse);

  // List all registered animals
  rpc ListRegisteredAnimals (EmptyRequest) returns (AnimalListResponse);
}

message AnimalRequest {
  double weight = 1;
}

message AnimalResponse {
  string message = 1;
}

message EmptyRequest {}

message Animal {
  int64 animalId = 1;
  string registrationNumber = 2;
  double weight = 3;
  string registrationDate = 4;
}

message AnimalListResponse {
  repeated Animal animals = 1;
}
